sdk/v0.3/anthropic.mdx
---
title: "pixeltable.functions.anthropic"
sidebarTitle: "anthropic"
icon: "square-m"
---

Pixeltable [UDFs](https://pixeltable.readme.io/docs/user-defined-functions-udfs) that wrap various endpoints from the Anthropic API. In order to use them, you must first `pip install anthropic` and configure your Anthropic credentials, as described in the [Working with Anthropic](https://pixeltable.readme.io/docs/working-with-anthropic) tutorial.


<a href="https://github.com/pixeltable/pixeltable/blob/v0.3/pixeltable/functions/anthropic.py#L0" target="_blank">View source on GitHub</a>

## UDFs


---

### `invoke_tools()` <sub>udf</sub>

Converts an Anthropic response dict to Pixeltable tool invocation format and calls `tools._invoke()`.


**Signature:**

```python
invoke_tools(
    tools: pixeltable.func.tools.Tools,
    response: pixeltable.exprs.expr.Expr
)-> pixeltable.exprs.inline_expr.InlineDict
```


---

### `messages()` <sub>udf</sub>

Create a Message.


Equivalent to the Anthropic `messages` API endpoint. For additional details, see: [https://docs.anthropic.com/en/api/messages](https://docs.anthropic.com/en/api/messages)

Request throttling: Uses the rate limit-related headers returned by the API to throttle requests adaptively, based on available request and token capacity. No configuration is necessary.

**Requirements:**

- `pip install anthropic`


**Signature:**

```python
messages(
    messages: Json,
    model: String,
    max_tokens: Int,
    metadata: Optional[Json],
    stop_sequences: Optional[Json],
    system: Optional[String],
    temperature: Optional[Float],
    tool_choice: Optional[Json],
    tools: Optional[Json],
    top_k: Optional[Int],
    top_p: Optional[Float],
    timeout: Optional[Float]
)-> Json
```

**Parameters:**

- **`messages`** (*Json*): Input messages.
- **`model`** (*String*): The model that will complete your prompt.

**Returns:**

- *Json*: A dictionary containing the response and other metadata.



**Example:**

Add a computed column that applies the model `claude-3-haiku-20240307` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
msgs = [{'role': 'user', 'content': tbl.prompt}]
tbl.add_computed_column(response=messages(msgs, model='claude-3-haiku-20240307'))
```

